static/css/writing.css
/* inspired by
 * http://mark.reid.name/files/css/screen.css
 */

body {
  font: 16px/1.5 Palatino, Georgia, "times new roman", serif;
  color: #333;
  background-color: whitesmoke;
}

#container {
  width:70%;
  min-width:700px;
  padding: 24px;
  margin: 0 auto;
  margin-top: 21px;
  margin-bottom: 42px;
  background:white;
  border: 1px solid silver;
  box-shadow: 3px 5px 5px #ccc;
}

img { -ms-interpolation-mode:bicubic; }

p { margin: 0 0 1.5em 0; }

pre { font-size:13px; margin-bottom: 1.5em; }
code { font-size:14px; border:1px solid silver; padding:2px; }
pre > code { font-size:13px; border:none; padding:none; } /* HACK :( */

a { text-decoration: none; color: #339 }
a:hover { text-decoration: underline; color: #33f; }

h1,h2,h3,h4 { 
	line-height:1em; 
	font-size:1.5em; 
	font-weight: normal; 
	clear: left; 	
	font-family: 'lucida grande', sans-serif; 
}
h1 { margin-bottom: 1em; }
h2 {
	font-size: 100%;
	line-height: 1.5em;
	margin:1.5em 0 1.5em 0;
	font-weight:bold;
}
h3 { font-size: 100%;
	line-height: 1.5em;
	margin: 1.5em 0 0 0;
	font-weight: normal;
	font-variant: small-caps;
}

hr { 
	border-top: 1px solid silver;
	border-bottom: none;
	padding: 0;
	margin: 1.46em 0 0 0;
}

